[tmux] enable truecolors for alacritty

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,7 @@ set -g prefix ^A
 bind a send-prefix
 set -g escape-time 10
 set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",alacritty:Tc"
 set -g bell-action any
 set -g visual-bell off
 set -g message-bg default
