[tmux] Convert deprecated options

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,8 +6,6 @@ set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",alacritty:Tc"
 set -g bell-action any
 set -g visual-bell off
-set -g message-bg default
-set -g message-fg default
-set -g status-bg default
-set -g status-fg default
+set -g message-style bg=default,fg=default
+set -g status-style bg=default,fg=default
 #set -g status-utf8
