[sway] brightnessctl -> light (retired in fedora)

--- a/config/sway/config
+++ b/config/sway/config
@@ -83,8 +83,8 @@ bindsym XF86AudioMute         exec pactl set-sink-mute 0 toggle
 bindsym XF86AudioNext         exec playerctl next
 bindsym XF86AudioPlay         exec playerctl play-pause
 bindsym XF86AudioPrev         exec playerctl previous
-bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
-bindsym XF86MonBrightnessUp   exec brightnessctl set +5%
+bindsym XF86MonBrightnessDown exec light -U 5
+bindsym XF86MonBrightnessUp   exec light -A 5
 
 #
 # Basic/utility bindings
