[sway] Hide tabbar for single window; rely on dbus activation to start mako/dunst

--- a/config/sway/config
+++ b/config/sway/config
@@ -264,6 +264,7 @@ for_window [app_id="waybar" floating] {
 }
 
 default_border none
+hide_edge_borders --i3 both
 
 bar {
     swaybar_command waybar
