--- a/config/sway/config
+++ b/config/sway/config
@@ -71,6 +71,10 @@ input "2:7:SynPS/2_Synaptics_TouchPad" {
     tap enabled
 }
 
+input "1267:8304:ELAN_Touchscreen" {
+    map_to_output eDP-1
+}
+
 ### Key bindings
 # Horrible mix of awesome, xmonad and i3 bindings
 
@@ -104,8 +108,9 @@ bindsym $mod+Shift+p exec $alt_menu
 bindsym $mod+l exec $lock
 
 # screenshot
-bindsym Print      exec "grim -o $(swaymsg -t get_outputs | jq -r '.[] | select(.focused) | .name') $(xdg-user-dir PICTURES)/$(date +'%F-%T_grim.png')"
-bindsym Alt+Print  exec "grim -g \"$(slurp)\" $(xdg-user-dir PICTURES)/$(date +'%F-%T_grim.png')"
+set $screenshot_pattern "$(xdg-user-dir PICTURES)/Screenshots/$(date +'%F-%T_grim.png')"
+bindsym Print      exec "grim -o $(swaymsg -t get_outputs | jq -r '.[] | select(.focused) | .name') \"$screenshot_pattern\""
+bindsym Alt+Print  exec "grim -g \"$(slurp)\" \"$screenshot_pattern\""
 
 # Drag floating windows by holding down $mod and left mouse button.
 # Resize them with right mouse button + $mod.
@@ -256,6 +261,8 @@ for_window [class="calibre"] move container to workspace 4
 for_window [class="Steam"] move container to workspace 6
 for_window [app_id="pinentry-qt"] floating enable
 for_window [app_id="zenity"] floating enable
+# nested wlroots compositors
+assign [app_id="wlroots"] 9
 
 #for_window [app_id="waybar" floating] {
 #    mark ContextMenu
