--- a/config/sway/config
+++ b/config/sway/config
@@ -280,15 +280,5 @@ bar {
 #   status_command while date +'%Y-%m-%d %l:%M:%S %p'; do sleep 1; done
 }
 
-### Autostart applications
-exec ~/dotfiles/config/sway/autorun.sh
-# Systemd autostart target (https://github.com/swaywm/sway/wiki/Systemd-integration)
-exec systemctl --user import-environment DISPLAY WAYLAND_DISPLAY SWAYSOCK
-exec hash dbus-update-activation-environment 2>/dev/null && \
-     dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK
-exec systemctl --user start sway-session.target
-# sleep 1 is a hack that gives waybar time to bind to org.kde.StatusNotifierHost
-# eventually should be addressed with dbus activation
-exec 'sleep 1; dex-autostart --autostart -e sway'
-
-#include /etc/sway/config.d/*
+include /etc/sway/config.d/*
+include ~/.config/sway/config.d/*.conf
