[sway] Enable lxqt-policykit-agent. Set layout only for keyboard input devices.

--- a/config/sway/config
+++ b/config/sway/config
@@ -61,7 +61,7 @@ exec swayidle -w \
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
 
-input * {
+input type:keyboard {
     xkb_layout us,ru
     xkb_options grp:shifts_toggle
 }
