--- a/config/sway/config.d/90-systemd.conf
+++ b/config/sway/config.d/90-systemd.conf
@@ -1,5 +1,5 @@
 # Systemd autostart target (https://github.com/swaywm/sway/wiki/Systemd-integration)
 exec command -v dbus-update-activation-environment 2>/dev/null && \
      dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK XDG_CURRENT_DESKTOP
-exec systemctl --user import-environment DISPLAY WAYLAND_DISPLAY SWAYSOCK XDG_CURRENT_DESKTOP; \
+exec systemctl --user import-environment DISPLAY WAYLAND_DISPLAY SWAYSOCK XDG_CURRENT_DESKTOP && \
      systemctl --user start sway-session.target
