[sway] Update rules for firefox

--- a/config/sway/config.d/60-windows-firefox.conf
+++ b/config/sway/config.d/60-windows-firefox.conf
@@ -1,6 +1,7 @@
-for_window [class="Firefox"] mark Browser
+for_window [app_id="firefox"] mark Browser
+for_window [class="firefox"]  mark Browser
 
-for_window [title="Firefox - Sharing Indicator"] {
+for_window [app_id="firefox" title="Firefox - Sharing Indicator"] {
     floating enable
     move position 200 0
 }
