feat(waybar): add wlr/taskbar config (disabled)
Remove network state as it's duplicated by network-manager-applet icon.
Remove layer specification.

--- a/config/waybar/config
+++ b/config/waybar/config
@@ -1,7 +1,7 @@
 {
-    "layer": "top",
     "modules-left": [
         "sway/workspaces",
+//        "wlr/taskbar",
         "custom/layout",
         "sway/mode"
     ],
@@ -15,7 +15,6 @@
         "pulseaudio",
         "cpu",
         "memory",
-        "network",
         "battery",
         "clock",
         "clock#msk",
@@ -37,6 +36,11 @@
             "focused": "",
             "default": ""
         }
+    },
+    "wlr/taskbar": {
+        // "all-outputs": true,
+        "on-click": "activate",
+        "tooltip": "[{short_state}] {title}"
     },
     "custom/layout": {
         "format": "[{}]",
