feat: use systemd xdg autostart generator

--- a/config/sway/config.d/99-autostart.conf
+++ b/config/sway/config.d/99-autostart.conf
@@ -1,3 +1,4 @@
 # sleep 1 is a hack that gives waybar time to bind to org.kde.StatusNotifierHost
 # eventually should be addressed with dbus activation
-exec 'sleep 1; dex-autostart --autostart -e sway'
+exec 'sleep 1; systemctl --user start xdg-desktop-autostart.target'
+# exec 'sleep 1; dex-autostart --autostart -e sway'
